--- a/client/src/styles/signup.css
+++ b/client/src/styles/signup.css
@@ -52,6 +52,9 @@ input::placeholder {
   outline: none;
   border-radius: 5px;
 }
+#contact{
+  background: #e0dede;
+}
 .dropdown {
   width: 60%;
   /* height: 20px; */
